# Silcrow

./: .clinerules  .env.example  .gitattributes  .gitignore  .mcp.json  ACTIONS_AND_VALIDATION.md  ACTIONS_VALIDATION_GUIDE.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  CLI.md  CODE_REFACTORING_GUIDE.md  CRDT_COMPARISON.md  Cargo.toml  DOCUMENTATION_INDEX.md  GARDE_INTEGRATION_PLAN.md  GARDE_VALIDATOR_MAPPING.md  HOW_TO.md  HTML_MACRO_GUIDE.md  LAYOUT_SYSTEM.md  MIGRATION_ROADMAP.md  NUTYPE_INTEGRATION.md  NUTYPE_TYPES_ANSWER.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE3_GARDE_REMOVED.md  PLAN.md  POSTGRESQL_STATUS.md  R_FIELD_DIRECTIVE.md  UNIFIED_VALIDATION.md  UNIFIED_WS_PROPOSAL.md  VALIDATION_ROUTING_DESIGN.md  VALIDATION_SYSTEM_EXPLORATION.md  VALIDATORS_NUTYPE_MIGRATION.md  axumandmaud.md  build.js  debug.js  index.js  live.js  (+12 more)
crates/RHTMX-Form/: Cargo.toml
crates/RHTMX-Form/src/: lib.rs  validation.rs
crates/pilcrow/: Cargo.toml  pilcrow.toml  readme.md
crates/pilcrow/public/: silcrow.js
crates/pilcrow/src/: assets.rs  config.rs  extract.rs  lib.rs  response.rs  select.rs
crates/pilcrow/src/response/: base.rs  error.rs  html.rs  macros.rs  mod.rs
crates/rhtmx/: Cargo.toml  README.md
crates/rhtmx-cli/: Cargo.toml
crates/rhtmx-cli/src/: main.rs
crates/rhtmx-cli/src/commands/: build.rs  dev.rs  mod.rs  new.rs  theme.rs
crates/rhtmx-cli/src/dev/: server.rs  watcher.rs
crates/rhtmx-cli/src/project/: scaffold.rs
crates/rhtmx-cli/src/theme/: loader.rs  manifest.rs  mod.rs  registry.rs
crates/rhtmx-form-types/: Cargo.toml  README.md
crates/rhtmx-form-types/examples/: business_rules_in_types.rs  route_specific_types.rs
crates/rhtmx-form-types/src/: lib.rs
crates/rhtmx-isr/: Cargo.toml
crates/rhtmx-isr/src/: cache.rs  config.rs  engine.rs  lib.rs
crates/rhtmx-isr/src/storage/: dragonfly.rs  filesystem.rs  memory.rs  mod.rs
crates/rhtmx-macro/: Cargo.toml
crates/rhtmx-macro/src/: html.rs  http.rs  lib.rs
crates/rhtmx-server/: Cargo.toml
crates/rhtmx-server/examples/: http_verb_macros.rs
crates/rhtmx-server/src/: action_handlers.rs  example_actions.rs  form_context.rs  hot_reload.rs  main.rs  maud_wrapper.rs
crates/rhtmx-sync/: CODE_VERIFICATION.md  Cargo.toml  IMPROVEMENTS.md  README.md
crates/rhtmx-sync/docs/: postgresql-setup.md  supabase-integration.md
crates/rhtmx-sync/examples/: todo_sync.rhtmx
crates/rhtmx-sync/src/: change_tracker.rs  compression.rs  conflict.rs  db.rs  engine.rs  field_sync_api.rs  field_tracker.rs  field_websocket.rs  lib.rs  models.rs  postgres_notify.rs  schema.rs  sse.rs  syncable.rs  websocket.rs
crates/rhtmx-sync/src/js/: rhtmx-field-sync.js  rhtmx-sync.js
crates/rhtmx-sync/tests/: postgres_integration.rs
crates/rhtmx-validation/core/: Cargo.toml
crates/rhtmx-validation/core/src/: email.rs  lib.rs  password.rs  string.rs
crates/rhtmx-validation/wasm/: Cargo.toml
crates/rhtmx-validation/wasm/src/: lib.rs
crates/rhtmx/examples/: complete_features.rhtmx  r_field_directive.rhtmx  test_r_match.rhtmx  unified_validation.rs  users_crud.rhtmx
crates/rhtmx/src/: action_executor.rs  actions.rs  config.rs  database.rs  form_field.rs  html.rs  lib.rs  renderer.rs  request_context.rs  response.rs  template_loader.rs  value.rs
crates/rhtmx/src/validation/: mod.rs  validators.rs
crates/rhtmx/tests/: nutype_integration.rs
crates/rusty-forms/: AUDIT_REPORT.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  NUTYPE_MIGRATION_GUIDE.md  README.md
crates/rusty-forms-derive/: Cargo.toml  FEATURES.md  VALIDATORS_SUMMARY.md  VALIDATOR_GUIDE.md  WASM_INTEGRATION_GUIDE.md  advanced_validation_demo.rs
crates/rusty-forms-derive/src/: validation.rs
crates/rusty-forms-validation/: Cargo.toml
crates/rusty-forms-validation/src/: garde_validators.rs  lib.rs  numeric.rs  password.rs
crates/rusty-forms-wasm/: Cargo.toml  README.md  demo.html  validation.d.ts
crates/rusty-forms/RHTMX Router/: DELIVERABLES.txt  NEXTJS_COMPARISON.md  QUICK_REFACTORING_SUMMARY.txt
crates/rusty-forms/rusty-forms/: Cargo.toml
crates/rusty-forms/rusty-forms-derive/src/: lib.rs  validation.rs
crates/rusty-forms/rusty-forms-types/: Cargo.toml
crates/rusty-forms/rusty-forms-types/src/: lib.rs
crates/rusty-forms/rusty-forms-validation/: Cargo.toml
crates/rusty-forms/rusty-forms-validation/src/: collection.rs  email.rs  lib.rs  password.rs  string.rs
crates/rusty-forms/rusty-forms-wasm/: Cargo.toml  build.sh  validation.js
crates/rusty-forms/rusty-forms-wasm/src/: lib.rs
crates/rusty-forms/rusty-forms/src/: lib.rs
crates/rusty-forms/src/: lib.rs
crates/silcrow/: Cargo.toml  silcrow.js  silcrow.toml
crates/silcrow/src/: assets.rs  layout.rs  lib.rs
crates/silcrow/src/response/: base.rs  error.rs  html.rs  json.rs  macros.rs  mod.rs  proc_macro.rs  redirect.rs
docs/: INDEX.md  attributes.md  events.md  http-headers.md  javascript-api.md  live.md  navigator.md  optimistic.md  runtime.md  silcrow-api.md
examples/: html_macro_demo.rs  layouts_demo.rhtmx  validation_demo.rhtmx
mcp/: docs.json
pages/: _layout.rhtml  index.rhtml
rhtml-macro/: Cargo.toml
rhtml-parser/: Cargo.toml
rhtml-router/: Cargo.toml
rhtmx/: Cargo.toml  FEATURES.md  LAYOUTS.md  QUICKSTART.md  README.md
rhtmx/docs/: CONFIGURATION.md  FEATURES.md
rhtmx/docs/html!/: HTML_MACRO_GUIDE.md  HTML_MACRO_QUICK_REF.md  HTML_MACRO_SUMMARY.md
rhtmx/docs/http/: HTTP_HANDLERS_GUIDE.md  HTTP_HANDLERS_QUICK_REF.md  HTTP_HANDLERS_SUMMARY.md  README.md
rhtmx/docs/maud!/: MAUD_MACRO_GUIDE.md  MAUD_MACRO_QUICK_REF.md  MAUD_MACRO_SUMMARY.md
rhtmx/examples/: complete_features.rs  layouts_demo.rs  test_r_match.rs  users_crud.rs  validation_demo.rs
rhtmx/rhtmx-macro/: Cargo.toml
rhtmx/rhtmx-macro/src/: html.rs  http.rs  lib.rs  validation.rs
rhtmx/rhtmx-parser/: Cargo.toml
rhtmx/rhtmx-parser/src/: html_directive.rs  lib.rs  mod.rs  show_directive.rs
rhtmx/src/: html.rs  lib.rs
rhtmx/src/layouts/: admin.rs  mod.rs  root.rs
rhtmx/src/validation/: mod.rs
src/: atoms.js  lib.rs  (+24 more)
(+119 files in other folders)
