[workspace]
members = [
  "crates/rhtmx",
  "crates/rhtmx-macro",
  "crates/rhtmx-parser",
  "crates/rhtmx-router",
  "crates/rhtmx-sync",
  "crates/rhtmx-server",
  "crates/rhtmx-cli",
  "crates/rhtmx-isr",
  "crates/rusty-forms",
  "crates/rusty-forms-derive",
  "crates/rusty-forms-types",
  "crates/rusty-forms-validation",
  "crates/rhtmx-validation/wasm",
]

resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
toml = "0.8"
once_cell = "1.19"
maud = "0.26"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = "0.5"
tower-livereload = "0.9.6"
notify = "6.1"
urlencoding = "2.1"
sqlx = { version = "0.7", features = [
  "sqlite",
  "postgres",
  "any",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
] }
