[workspace]
members = [
  "crates/rhtmx",
  "crates/rhtmx-macro",
  "crates/rhtmx-router",
  "crates/rhtmx-server",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
maud = "0.26"
axum = "0.7"
tower-livereload = "0.9.6"
notify = "6.1"
urlencoding = "2.1"
