[package]
name = "rhtmx"
version = "0.1.0"
edition = "2021"
description = "RHTMX - Rust + HTMX framework with compile-time HTML generation"
license = "MIT"
repository = "https://github.com/jeetkhinde/RHTML"

[lib]
name = "rhtmx"
path = "src/lib.rs"

[dependencies]
rhtmx-macro = { path = "rhtmx-macro" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
