[package]
name = "rhtmx-form"
version = "0.1.0"
edition = "2021"
description = "Form for RHTMX framework"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
rhtmx-validation-core = { path = "../rhtmx-validation/core" }
garde = { version = "0.22.0", features = ["email", "url", "pattern"] }

[features]
nutype = []
