[package]
name = "rhtmx-cli"
version = "0.1.0"
edition = "2021"
authors = ["RHTMX Contributors"]
license = "MIT"
description = "CLI tool for RHTMX framework - create, build, and manage RHTMX projects with theme support"
repository = "https://github.com/jeetkhinde/RHTMX"
keywords = ["cli", "rhtmx", "web", "framework", "theme"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "rhtmx"
path = "src/main.rs"

[dependencies]
# Workspace crates
rhtmx = { path = "../rhtmx" }
rhtmx-router = { path = "../rhtmx-router" }
rhtmx-parser = { path = "../rhtmx-parser" }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Dev server (optional, only used for `rhtmx dev`)
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-livereload = { workspace = true, optional = true }
notify = { workspace = true, optional = true }

# Utilities
anyhow = { workspace = true }

# File operations
walkdir = "2.5"

# Terminal output
colored = "2.1"

[features]
default = ["dev-server"]
dev-server = ["tokio", "axum", "tower-livereload", "notify"]
