[package]
name = "rhtmx-form-types"
version = "0.1.0"
edition = "2021"
description = "Common validated types for RHTMX forms using nutype"
license = "MIT"

[dependencies]
# Core validation using nutype
nutype = { version = "0.5", default-features = false, features = ["serde"] }

# Serialization support (for forms and WASM)
serde = { version = "1.0", features = ["derive"] }

[features]
default = []

# Enable all type definitions
all-types = []

# WASM-specific features
wasm = []
