# crates/rhtmx-macro/Cargo.toml
[package]
name = "rhtmx-macro"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for RHTMX framework"
license = "MIT"
repository = "https://github.com/jeetkhinde/RHTMX"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "1.4"
