# crates/rhtmx-server/Cargo.toml
[package]
name = "rhtmx-server"
version = "0.1.0"
edition = "2021"
description = "Reference server implementation for RHTMX framework"
license = "MIT"
repository = "https://github.com/jeetkhinde/RHTMX"

[[bin]]
name = "rhtmx-server"
path = "src/main.rs"

[dependencies]
rhtmx = { path = "../rhtmx" }

axum = { workspace = true }
tokio = { workspace = true }
tower-livereload = { workspace = true }
notify = { workspace = true }

serde_json = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

urlencoding = { workspace = true }
maud = { workspace = true }
