# crates/rhtmx-sync/Cargo.toml
[package]
name = "rhtmx-sync"
version = "0.1.0"
edition = "2021"
authors = ["RHTMX Contributors"]
license = "MIT"
description = "Automatic IndexedDB synchronization for RHTMX applications with minimal code."
repository = "https://github.com/jeetkhinde/RHTMX"
keywords = ["sync", "indexeddb", "offline", "htmx", "web"]
categories = ["web-programming"]
readme = "README.md"

[lib]
name = "rhtmx_sync"
path = "src/lib.rs"

[dependencies]
# Local macro crate
rhtmx-macro = { path = "../rhtmx-macro" }

# Web framework & async runtime
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization & data
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Database (Diesel ORM)
diesel = { version = "2.1", features = ["postgres", "sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.4", features = ["postgres", "tokio", "bb8"] }
diesel_migrations = "2.1"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging & async utilities
tracing = { workspace = true }
async-stream = "0.3"

# Compression
flate2 = "1.0"

[dev-dependencies]
axum-test = "14.0"
pretty_assertions = "1.4"
rstest = "0.22"
tracing-subscriber = "0.3"
