[package]
name = "rusty-forms-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for rusty-forms - Rust form validation library"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
rusty-forms-validation = { path = "../rusty-forms-validation", default-features = false }

[features]
nutype = []
