[package]
name = "rusty-forms-validation"
version = "0.1.0"
edition = "2021"
description = "Core validation functions for rusty-forms (no_std compatible)"
license = "MIT"

[lib]
name = "rusty_forms_validation"
path = "src/lib.rs"

[dependencies]
# No dependencies needed - validation is now done via nutype types

[features]
default = ["std"]
std = []
