[workspace]
members = [
  "rusty-forms",
  "rusty-forms-derive",
  "rusty-forms-validation",
  "rusty-forms-types",
  "rusty-forms-wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/rusty-forms"

[workspace.dependencies]
# Shared external dependencies
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
nutype = { version = "0.5", default-features = false }
