[package]
name = "silcrow"
version = "0.1.0"
edition = "2021"
description = "Silcrow response builders for Axum + Maud"
license = "MIT"
repository = "https://github.com/jeetkhinde/RHTMX"

[lib]
name = "silcrow"
path = "src/lib.rs"
proc-macro = true
[dependencies]
maud = "0.26"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0.101"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
