[package]
name = "rhtmx-validation-core"
version = "0.1.0"
edition = "2021"
description = "Core validation functions for RHTMX (no_std compatible)"
license = "MIT"

[lib]
name = "rhtmx_validation_core"
path = "src/lib.rs"

[dependencies]
# Optional garde dependency for built-in validators
garde = { version = "0.22", optional = true, default-features = false, features = ["email", "url", "pattern"] }

[features]
default = ["std", "garde"]
std = []
garde = ["dep:garde"]
