[package]
name = "rusty-forms-types"
version = "0.1.0"
edition = "2021"
description = "Common validated types for rusty-forms using nutype"
license = "MIT"

[dependencies]
# Core validation using nutype
nutype = { version = "0.5", default-features = false, features = ["serde"] }

# Serialization support (for forms and WASM)
serde = { version = "1.0", features = ["derive"] }

# RFC-compliant validators
email_address = { version = "0.2", default-features = false, optional = true }
url = { version = "2.5", optional = true }
regex = { version = "1.10", optional = true }
once_cell = { version = "1.19", optional = true }

# International phone numbers
phonenumber = { version = "0.3", optional = true }

# Date/Time validation
time = { version = "0.3", default-features = false, features = ["parsing", "formatting"], optional = true }

# Password strength estimation
zxcvbn = { version = "3.0", optional = true }

# Credit card validation
card-validate = { version = "2.4", optional = true }

# Content moderation
rustrict = { version = "0.7", optional = true }

# UUID validation
uuid = { version = "1.10", features = ["std", "serde"], optional = true }

[features]
default = []

# Core validators
rfc-email = ["dep:email_address"]
rfc-url = ["dep:url"]
regex-validation = ["dep:regex", "dep:once_cell"]

# Advanced validators
intl-phone = ["dep:phonenumber"]
datetime = ["dep:time"]
password-strength = ["dep:zxcvbn"]
credit-card = ["dep:card-validate"]
content-moderation = ["dep:rustrict"]
uuid-validation = ["dep:uuid"]

# Enable all type definitions
all-types = ["rfc-email", "rfc-url", "regex-validation", "intl-phone", "datetime", "password-strength", "credit-card", "content-moderation", "uuid-validation"]

# WASM-specific features
wasm = ["rfc-email", "rfc-url", "regex-validation"]
