[package]
name = "rusty-forms-validation"
version = "0.1.0"
edition = "2021"
description = "Core validation functions for rusty-forms (no_std compatible)"
license = "MIT"

[lib]
name = "rusty_forms_validation"
path = "src/lib.rs"

[dependencies]
# RFC-compliant validators (optional)
email_address = { version = "0.2", default-features = false, optional = true }
url = { version = "2.5", optional = true }
regex = { version = "1.10", optional = true }
once_cell = { version = "1.19", optional = true }

[features]
default = ["std"]
std = []

# RFC-compliant validators
rfc-email = ["dep:email_address"]
rfc-url = ["std", "dep:url"]
regex-validation = ["std", "dep:regex", "dep:once_cell"]

# All enhanced validators
enhanced = ["rfc-email", "rfc-url", "regex-validation"]
