[package]
name = "rusty-forms"
version = "0.1.0"
edition = "2021"
description = "A complete Rust form validation library with derive macros, type-safe validation, and client/server sync"
license = "MIT"
keywords = ["forms", "validation", "web", "rusty-forms", "derive"]
categories = ["web-programming", "wasm"]
repository = "https://github.com/jeetkhinde/rusty-forms"
documentation = "https://docs.rs/rusty-forms"

[dependencies]
# Core derive macros (always included)
rusty-forms-derive = { path = "../rusty-forms-derive", version = "0.1.0" }

# Core validation functions (always included for traits)
rusty-forms-validation = { path = "../rusty-forms-validation", version = "0.1.0" }

# Optional: Nutype validated types
rusty-forms-types = { path = "../rusty-forms-types", version = "0.1.0", optional = true }

# Required for serde derive
serde = { version = "1.0", features = ["derive"] }

[features]
default = []

# Include nutype-based validated types
nutype = ["dep:rusty-forms-types"]

# Enable all features
full = ["nutype"]

[dev-dependencies]
serde_json = "1.0"
